--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.application.name=bankProject
-spring.datasource.url=jdbc:mysql://localhost:3306/bankdb
-spring.datasource.username=root
+#spring.application.name=bankProject
+#spring.datasource.url=jdbc:mysql://localhost:3306/bankdb
+#spring.datasource.username=root
+#spring.datasource.password=#Rafat1410
+
+spring.datasource.url=jdbc:mysql://mysql-rafatbank.alwaysdata.net:3306/rafatbank_23?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=rafatbank
 spring.datasource.password=#Rafat1410
