Add Dockerfile for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 #spring.datasource.username=root
 #spring.datasource.password=#Rafat1410
 
-spring.datasource.url=jdbc:mysql://mysql-rafatbank.alwaysdata.net:3306/rafatbank_23?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql-rafatbank.alwaysdata.net:3306/rafatbank_23
 spring.datasource.username=rafatbank
 spring.datasource.password=#Rafat1410
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
