--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-spring.application.name=bankProject
-#spring.datasource.url=jdbc:mysql://localhost:3306/bankdb
-#spring.datasource.username=root
-#spring.datasource.password=#Rafat1410
-
 spring.datasource.url=jdbc:mysql://mysql-rafatbank.alwaysdata.net:3306/rafatbank_23
 spring.datasource.username=rafatbank
-spring.datasource.password=Rafat1410
+spring.datasource.password=#Rafat1410
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
