--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://mysql-rafatbank.alwaysdata.net:3306/rafatbank_23
 spring.datasource.username=rafatbank
-spring.datasource.password=#Rafat1410
+spring.datasource.password=Rafat1410
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
